k8s/20-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: websockets-demo-service
spec:
  selector:
    app: websockets-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
