k8s/40-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websockets
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/affinity: "true"
    #
    # verwijder /chatroom bij het doorsturen naar de pod.
    #traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: test.omen.intern
    http:
      paths:
      - path: /
        backend:
          serviceName: websockets
          servicePort: flask
